Video Sequencer Preview with Prefetch Frames crashes inside Meta Strip #94768

Closed
opened 2022-01-09 15:12:00 +01:00 by Benjamin Swart · 9 comments

System Information
Operating system: Linux-5.13.0-23-generic-x86_64-with-glibc2.34 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: Unknown, broken in 2.90 - 2.93, 2.81 crashes even earlier

Short description of error
The Video Sequencer Preview area causes a crash when rendering the inside of a Meta Strip with Prefetch Frames enabled, if there is a scene clip inside the sequencer.
The crash sometimes doesn't occur after moving the clips around.

Exact steps for others to reproduce the error

  1. Create a new file using the Video Editing template.
  2. Add a Layout workspace.
  3. Create a second scene. I'll call the scenes VSE and 3D.
  4. Go to the 3D scene in the Layout workspace and add a camera if there isn't one.
  5. Go to the VSE scene in the Video Editing workspace and add the scene using Add>Scene>3D.
  6. Add a Color clip using Add>Color.
  7. Turn the Color clip into a Meta Strip using Strip>Make Meta Strip.
  8. Open the properties pane in the Preview area and enable View>View Setting>Prefetch Frames. Your file should now be identical to the attached one.
  9. Use Strip>Toggle Meta. Blender should crash shortly.

Files
Test .blender file:
Crash 2.blend
System info:
system-info.txt
Crash file:
Crash.crash.txt

**System Information** Operating system: Linux-5.13.0-23-generic-x86_64-with-glibc2.34 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: Unknown, broken in 2.90 - 2.93, 2.81 crashes even earlier **Short description of error** The Video Sequencer Preview area causes a crash when rendering the inside of a Meta Strip with Prefetch Frames enabled, if there is a scene clip inside the sequencer. The crash sometimes doesn't occur after moving the clips around. **Exact steps for others to reproduce the error** 1. Create a new file using the Video Editing template. 2. Add a Layout workspace. 3. Create a second scene. I'll call the scenes VSE and 3D. 4. Go to the 3D scene in the Layout workspace and add a camera if there isn't one. 5. Go to the VSE scene in the Video Editing workspace and add the scene using Add>Scene>3D. 6. Add a Color clip using Add>Color. 7. Turn the Color clip into a Meta Strip using Strip>Make Meta Strip. 8. Open the properties pane in the Preview area and enable View>View Setting>Prefetch Frames. Your file should now be identical to the attached one. 9. Use Strip>Toggle Meta. Blender should crash shortly. **Files** Test .blender file: [Crash 2.blend](https://archive.blender.org/developer/F12797468/Crash_2.blend) System info: [system-info.txt](https://archive.blender.org/developer/F12797467/system-info.txt) Crash file: [Crash.crash.txt](https://archive.blender.org/developer/F12797470/Crash.crash.txt)
Author

Added subscriber: @Svizel_pritula

Added subscriber: @Svizel_pritula

Added subscriber: @AndyBCX

Added subscriber: @AndyBCX
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can reproduce on current master

blender.exe         :0x00007FF6D0920FF0  bli_windows_system_backtrace_stack_thread C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\system_win32.c:233
blender.exe         :0x00007FF6D0920070  BLI_windows_system_backtrace_stack C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\system_win32.c:320
blender.exe         :0x00007FF6D091FA40  BLI_system_backtrace C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\system_win32.c:386
blender.exe         :0x00007FF6D0924860  _BLI_assert_print_backtrace C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\BLI_assert.c:50
blender.exe         :0x00007FF6CED0DF70  blender::deg::DepsgraphNodeBuilder::add_id_node C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\builder\deg_builder_nodes.cc:161
blender.exe         :0x00007FF6CED1C6D0  blender::deg::DepsgraphNodeBuilder::build_scene_render C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\builder\deg_builder_nodes_scene.cc:36
blender.exe         :0x00007FF6CECC4E80  blender::deg::RenderBuilderPipeline::build_nodes C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\builder\pipeline_render.cc:36
blender.exe         :0x00007FF6CECBD930  blender::deg::AbstractBuilderPipeline::build_step_nodes C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\builder\pipeline.cc:73
blender.exe         :0x00007FF6CECBD6F0  blender::deg::AbstractBuilderPipeline::build C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\builder\pipeline.cc:52
blender.exe         :0x00007FF6CEC6AFB0  DEG_graph_build_for_render_pipeline C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\depsgraph_build.cc:271
blender.exe         :0x00007FF6D077FE40  render_init_depsgraph C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\pipeline.c:1777
blender.exe         :0x00007FF6D07799D0  RE_RenderFrame C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\pipeline.c:1837
blender.exe         :0x00007FF6CE1C9C60  seq_render_scene_strip C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\sequencer\intern\render.c:1517
blender.exe         :0x00007FF6CE1C5370  do_render_strip_uncached C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\sequencer\intern\render.c:1665
blender.exe         :0x00007FF6CE1CAA00  seq_render_strip C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\sequencer\intern\render.c:1738
blender.exe         :0x00007FF6CE1CAC40  seq_render_strip_stack C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\sequencer\intern\render.c:1870
blender.exe         :0x00007FF6CE1C3F50  SEQ_render_give_ibuf C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\sequencer\intern\render.c:1954
blender.exe         :0x00007FF6CE1BAC30  seq_prefetch_frames C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\sequencer\intern\prefetch.c:495
blender.exe         :0x00007FF6D0921620  tslot_thread_start C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\threads.cc:221
blender.exe         :0x00007FF6D0C84510  _ptw32_threadStart
ucrtbased.dll       :0x00007FFA9CFD5340  register_onexit_function
KERNEL32.DLL        :0x00007FFAE1DC7020  BaseThreadInitThunk
ntdll.dll           :0x00007FFAE3022630  RtlUserThreadStart```
Thanks for the report. I can reproduce on current master ```lines=10 blender.exe :0x00007FF6D0920FF0 bli_windows_system_backtrace_stack_thread C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\system_win32.c:233 blender.exe :0x00007FF6D0920070 BLI_windows_system_backtrace_stack C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\system_win32.c:320 blender.exe :0x00007FF6D091FA40 BLI_system_backtrace C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\system_win32.c:386 blender.exe :0x00007FF6D0924860 _BLI_assert_print_backtrace C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\BLI_assert.c:50 blender.exe :0x00007FF6CED0DF70 blender::deg::DepsgraphNodeBuilder::add_id_node C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\builder\deg_builder_nodes.cc:161 blender.exe :0x00007FF6CED1C6D0 blender::deg::DepsgraphNodeBuilder::build_scene_render C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\builder\deg_builder_nodes_scene.cc:36 blender.exe :0x00007FF6CECC4E80 blender::deg::RenderBuilderPipeline::build_nodes C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\builder\pipeline_render.cc:36 blender.exe :0x00007FF6CECBD930 blender::deg::AbstractBuilderPipeline::build_step_nodes C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\builder\pipeline.cc:73 blender.exe :0x00007FF6CECBD6F0 blender::deg::AbstractBuilderPipeline::build C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\builder\pipeline.cc:52 blender.exe :0x00007FF6CEC6AFB0 DEG_graph_build_for_render_pipeline C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\depsgraph_build.cc:271 blender.exe :0x00007FF6D077FE40 render_init_depsgraph C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\pipeline.c:1777 blender.exe :0x00007FF6D07799D0 RE_RenderFrame C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\render\intern\pipeline.c:1837 blender.exe :0x00007FF6CE1C9C60 seq_render_scene_strip C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\sequencer\intern\render.c:1517 blender.exe :0x00007FF6CE1C5370 do_render_strip_uncached C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\sequencer\intern\render.c:1665 blender.exe :0x00007FF6CE1CAA00 seq_render_strip C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\sequencer\intern\render.c:1738 blender.exe :0x00007FF6CE1CAC40 seq_render_strip_stack C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\sequencer\intern\render.c:1870 blender.exe :0x00007FF6CE1C3F50 SEQ_render_give_ibuf C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\sequencer\intern\render.c:1954 blender.exe :0x00007FF6CE1BAC30 seq_prefetch_frames C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\sequencer\intern\prefetch.c:495 blender.exe :0x00007FF6D0921620 tslot_thread_start C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\threads.cc:221 blender.exe :0x00007FF6D0C84510 _ptw32_threadStart ucrtbased.dll :0x00007FFA9CFD5340 register_onexit_function KERNEL32.DLL :0x00007FFAE1DC7020 BaseThreadInitThunk ntdll.dll :0x00007FFAE3022630 RtlUserThreadStart```

This issue was referenced by f2fb9a0c59

This issue was referenced by f2fb9a0c59ab64358301e4d98ba35b5f122a0eaf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-01-11 06:18:40 +01:00

This issue was referenced by 9600f36cfc

This issue was referenced by 9600f36cfcba0bb9182e8fd453b7ef2040f8886a

This issue was referenced by 8b749260fb

This issue was referenced by 8b749260fbeb1b2d0b1d462eeacd29a175621dfd
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94768
No description provided.